SG-10218: changes for FGAC